--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,17 @@
     </properties>    
     <dependencies>
         <dependency>
+            <groupId>SQLServer</groupId>
+            <artifactId>SQL</artifactId>
+            <version>4.3</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
