--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>    
     <dependencies>
-       
+        <dependency>
+            <groupId>SQLServer</groupId>
+            <artifactId>SQL</artifactId>
+            <version>4.3</version>
+            <type>jar</type>
+        </dependency>       
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
