--- a/src/main/webapp/WEB-INF/Properties/Bengali_Language_Pack.properties
+++ b/src/main/webapp/WEB-INF/Properties/Bengali_Language_Pack.properties
@@ -9,6 +9,7 @@ suppliersbook=&#2488;&#2480;&#2476;&#2480;&#2494;&#2489;&#2453;&#2494;&#2480;&#2
 # Main Menu -Ends ----------------------------------------------------------------------
 # Order And Bill Menu Starts -------------------------------------------------------
 addneworder = &#2472;&#2468;&#2497;&#2472; &#2437;&#2480;&#2509;&#2465;&#2494;&#2480; &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495; 
+quickNewOrder=\u099c\u09ae\u09be \u098f\u09a8\u09cd\u099f\u09cd\u09b0\u09bf
 addadvance = &#2474;&#2480;&#2503; &#2437;&#2455;&#2509;&#2480;&#2495;&#2478;&nbsp; (Advance)
 editorderdetails=&#2437;&#2480;&#2509;&#2465;&#2494;&#2480; &#2476;&#2495;&#2482;&#2503; &#2474;&#2480;&#2495;&#2476;&#2480;&#2509;&#2468;&#2472;
 addorderhalt=&#2437;&#2480;&#2509;&#2465;&#2494;&#2480; &#2488;&#2509;&#2469;&#2455;&#2495;&#2468; &#2453;&#2480;&#2494;
@@ -17,6 +18,7 @@ searchorder=&#2476;&#2495;&#2482; &#2437;&#2472;&#2497;&#2488;&#2472;&#2509;&#24
 addstatus=&#2437;&#2480;&#2509;&#2465;&#2494;&#2480; &#2437;&#2476;&#2488;&#2509;&#2469;&#2494;&#2472; &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495;
 ordersettings=&#2437;&#2480;&#2509;&#2465;&#2494;&#2480; &#2488;&#2503;&#2463;&#2495;&#2434;&#2488;
 addnewitem=&#2472;&#2468;&#2497;&#2472; &#2438;&#2439;&#2463;&#2503;&#2478; &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495;
+advanceReport=\u099c\u09ae\u09be \u09b9\u09bf\u09b8\u09be\u09ac
 # Order And Bill Menu Ends --------------------------------------------------------
 Click=&#2453;&#2509;&#2482;&#2495;&#2453;&#2509;
 # Toolbar Starts ---------------------------------------------------------------------------
