--- a/src/main/webapp/WEB-INF/Properties/English_Language_Pack.properties
+++ b/src/main/webapp/WEB-INF/Properties/English_Language_Pack.properties
@@ -9,6 +9,7 @@ suppliersbook=Suppliers Book
 # Main Menu -Ends ----------------------------------------------------------------------
 # Order And Bill Menu Starts -------------------------------------------------------
 addneworder = Add New Order
+quickNewOrder=Add Quick Order
 addadvance = Add Advance
 editorderdetails=Edit Order Details
 addorderhalt=Add Order Halt Alert
@@ -17,6 +18,7 @@ searchorder=Search Order
 addstatus=Add Status
 ordersettings=Order Settings
 addnewitem=Add New Item
+advanceReport=Daily Advance Report
 # Order And Bill Menu Ends --------------------------------------------------------
 Click=Click
 # Toolbar Starts ---------------------------------------------------------------------------
