Order Update Implemented

--- a/src/main/webapp/WEB-INF/Properties/English_Language_Pack.properties
+++ b/src/main/webapp/WEB-INF/Properties/English_Language_Pack.properties
@@ -11,7 +11,7 @@ suppliersbook=Suppliers Book
 addneworder = Add New Order
 quickNewOrder=Add Quick Order
 addadvance = Add Advance
-editorderdetails=Edit Order Details
+updateNewOrder=Update Order Details
 addorderhalt=Add Order Halt Alert
 cancelorder=Cancel Order
 searchorder=Search Order
