Status Management , Location Implement

--- a/src/main/webapp/WEB-INF/Properties/Bengali_Language_Pack.properties
+++ b/src/main/webapp/WEB-INF/Properties/Bengali_Language_Pack.properties
@@ -19,6 +19,8 @@ addstatus=&#2437;&#2480;&#2509;&#2465;&#2494;&#2480; &#2437;&#2476;&#2488;&#2509
 ordersettings=&#2437;&#2480;&#2509;&#2465;&#2494;&#2480; &#2488;&#2503;&#2463;&#2495;&#2434;&#2488;
 addnewitem=&#2472;&#2468;&#2497;&#2472; &#2438;&#2439;&#2463;&#2503;&#2478; &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495;
 advanceReport=\u099c\u09ae\u09be \u09b9\u09bf\u09b8\u09be\u09ac
+addNewStatusType=\u09a8\u09a4\u09c1\u09a8 \u0985\u09ac\u09b8\u09cd\u09a5\u09be\u09a8 \u098f\u09a8\u09cd\u099f\u09cd\u09b0\u09bf 
+addNewLocation=\u09a8\u09a4\u09c1\u09a8 \u09b0\u09be\u0996\u09be\u09b0 \u099c\u09be\u09df\u0997\u09be \u098f\u09a8\u09cd\u099f\u09cd\u09b0\u09bf
 # Order And Bill Menu Ends --------------------------------------------------------
 Click=&#2453;&#2509;&#2482;&#2495;&#2453;&#2509;
 # Toolbar Starts ---------------------------------------------------------------------------
