--- a/src/main/webapp/WEB-INF/Properties/English_Language_Pack.properties
+++ b/src/main/webapp/WEB-INF/Properties/English_Language_Pack.properties
@@ -19,6 +19,8 @@ addstatus=Add Status
 ordersettings=Order Settings
 addnewitem=Add New Item
 advanceReport=Daily Advance Report
+addNewStatusType=Add New Status Type
+addNewLocation=Add New Location
 # Order And Bill Menu Ends --------------------------------------------------------
 Click=Click
 # Toolbar Starts ---------------------------------------------------------------------------
