Status , Location Updated

--- a/src/main/webapp/WEB-INF/Properties/SelecItemContainer.properties
+++ b/src/main/webapp/WEB-INF/Properties/SelecItemContainer.properties
@@ -2,3 +2,7 @@ addneworder.location.bagnan=BAGNAN,\u09ac\u09be\u0997\u09a8\u09be\u09a8
 addneworder.location.mecheda=MECHEDA,\u09ae\u09c7\u099a\u09c7\u09a6\u09be
 addneworder.vendor.away=AWAY,\u09ac\u09be\u0987\u09b0\u09c7\u09b0 \u09aa\u09bf\u09b8 
 addneworder.vendor.home=HOME,\u0986\u09ae\u09be\u09a6\u09c7\u09b0 \u09aa\u09bf\u09b8
+addneworder.producttype.cottonwork=COTTON WORK,\u0995\u099f\u09a8 \u0995\u09be\u099c \u0995\u09b0\u09be
+addneworder.producttype.cottonprinted=COTTON PRINTED,\u0995\u099f\u09a8 \u099b\u09be\u09aa\u09be
+addneworder.producttype.syntheticwork=SYNTHETIC WORK,\u09b8\u09bf\u09a8\u09a5\u09c7\u099f\u09bf\u0995 \u0995\u09be\u099c \u0995\u09b0\u09be  
+addneworder.producttype.syntheticprinted=SYNTHETIC PRINTED,\u09b8\u09bf\u09a8\u09a5\u09c7\u099f\u09bf\u0995 \u099b\u09be\u09aa\u09be 
