Employee Management Added

--- a/src/main/webapp/WEB-INF/Properties/English_Language_Pack.properties
+++ b/src/main/webapp/WEB-INF/Properties/English_Language_Pack.properties
@@ -21,6 +21,9 @@ addnewitem=Add New Item
 advanceReport=Daily Advance Report
 addNewStatusType=Add New Status Type
 addNewLocation=Add New Location
+# Labour Menu Starts ------------------------------------------------------------------
+addNewEmployee=Add New Employee
+# Labour Menu Ends ------------------------------------------------------------------
 # Order And Bill Menu Ends --------------------------------------------------------
 Click=Click
 # Toolbar Starts ---------------------------------------------------------------------------
