--- a/src/main/webapp/WEB-INF/Properties/SelecItemContainer.properties
+++ b/src/main/webapp/WEB-INF/Properties/SelecItemContainer.properties
@@ -5,4 +5,23 @@ addneworder.vendor.home=HOME,\u0986\u09ae\u09be\u09a6\u09c7\u09b0 \u09aa\u09bf\u
 addneworder.producttype.cottonwork=COTTON WORK,\u0995\u099f\u09a8 \u0995\u09be\u099c \u0995\u09b0\u09be
 addneworder.producttype.cottonprinted=COTTON PRINTED,\u0995\u099f\u09a8 \u099b\u09be\u09aa\u09be
 addneworder.producttype.syntheticwork=SYNTHETIC WORK,\u09b8\u09bf\u09a8\u09a5\u09c7\u099f\u09bf\u0995 \u0995\u09be\u099c \u0995\u09b0\u09be  
-addneworder.producttype.syntheticprinted=SYNTHETIC PRINTED,\u09b8\u09bf\u09a8\u09a5\u09c7\u099f\u09bf\u0995 \u099b\u09be\u09aa\u09be 
+addneworder.producttype.syntheticprinted=SYNTHETIC PRINTED,\u09b8\u09bf\u09a8\u09a5\u09c7\u099f\u09bf\u0995 \u099b\u09be\u09aa\u09be
+addnewemployee.role.tailor=TAILOR,\u09ae\u09bf\u09b8\u09cd\u09a4\u09cd\u09b0\u09bf
+addnewemployee.role.master=MASTER,\u09ae\u09be\u09b8\u09cd\u099f\u09be\u09b0
+addnewemployee.role.salesman=SALESMAN,\u09b8\u09cd\u09b2\u09c7\u09b8\u09ae\u09be\u09a8
+addnewemployee.role.finisher=FINISHER,\u09b9\u09be\u09a4\u0995\u09be\u099c
+addnewemployee.role.iron=IRON,\u0987\u09b8\u09cd\u09a4\u09cd\u09b0\u09bf
+addnewemployee.paytype.weeklysalary=WEEKLY_SALARY,\u09b8\u09be\u09aa\u09cd\u09a4\u09be\u09b9\u09bf\u0995 \u09ae\u09be\u0987\u09a8\u09c7
+addnewemployee.paytype.monthlysalary=MONTHY_SALARY,\u09ae\u09be\u09b8\u09bf\u0995 \u09ae\u09be\u0987\u09a8\u09c7
+addnewemployee.paytype.perpiece=PER_PIECE,\u09ab\u09c1\u09b0\u09cb\u09a8
+addnewemployee.holiday.sunday=SUNDAY,\u09b0\u09ac\u09bf\u09ac\u09be\u09b0
+addnewemployee.holiday.moday=MONDAY,\u09b8\u09cb\u09ae\u09ac\u09be\u09b0
+addnewemployee.holiday.tuesday=TUESDAY,\u09ae\u0999\u09cd\u0997\u09b2\u09ac\u09be\u09b0
+addnewemployee.holiday.wednesday=WEDNESDAY,\u09ac\u09c1\u09a7\u09ac\u09be\u09b0
+addnewemployee.holiday.thursday=THURSDAY,\u09ac\u09c3\u09b9\u09b8\u09cd\u09aa\u09a4\u09bf\u09ac\u09be\u09b0
+addnewemployee.holiday.friday=FRIDAY,\u09b6\u09c1\u0995\u09cd\u09b0\u09c1\u09ac\u09be\u09b0
+addnewemployee.holiday.saturday=SATURDAY,\u09b6\u09a8\u09bf\u09ac\u09be\u09b0 
+
+
+
+
