--- a/src/main/webapp/WEB-INF/Properties/Bengali_Language_Pack.properties
+++ b/src/main/webapp/WEB-INF/Properties/Bengali_Language_Pack.properties
@@ -22,6 +22,9 @@ advanceReport=\u099c\u09ae\u09be \u09b9\u09bf\u09b8\u09be\u09ac
 addNewStatusType=\u09a8\u09a4\u09c1\u09a8 \u0985\u09ac\u09b8\u09cd\u09a5\u09be\u09a8 \u098f\u09a8\u09cd\u099f\u09cd\u09b0\u09bf 
 addNewLocation=\u09a8\u09a4\u09c1\u09a8 \u09b0\u09be\u0996\u09be\u09b0 \u099c\u09be\u09df\u0997\u09be \u098f\u09a8\u09cd\u099f\u09cd\u09b0\u09bf
 # Order And Bill Menu Ends --------------------------------------------------------
+# Labour Menu Starts ------------------------------------------------------------------
+addNewEmployee=\u09a8\u09a4\u09c1\u09a8 \u0995\u09b0\u09cd\u09ae\u09c0 \u0985\u09a8\u09cd\u09a4\u09b0\u09cd\u09ad\u09c1\u0995\u09cd\u09a4\u09bf
+# Labour Menu Ends ------------------------------------------------------------------
 Click=&#2453;&#2509;&#2482;&#2495;&#2453;&#2509;
 # Toolbar Starts ---------------------------------------------------------------------------
 addNewItem=&#2472;&#2468;&#2497;&#2472; &#2438;&#2439;&#2463;&#2503;&#2478; &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495;
