--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
     <artifactId>gson</artifactId>
     <version>2.8.0</version>
 </dependency>
+<dependency>
+    <groupId>com.mchange</groupId>
+    <artifactId>c3p0</artifactId>
+    <version>0.9.5.1</version>
+</dependency>
 
 
     </dependencies>
