Day Wise Production Report With Statistics

--- a/src/main/webapp/WEB-INF/Properties/Bengali_Language_Pack.properties
+++ b/src/main/webapp/WEB-INF/Properties/Bengali_Language_Pack.properties
@@ -26,6 +26,7 @@ addNewLocation=\u09a8\u09a4\u09c1\u09a8 \u09b0\u09be\u0996\u09be\u09b0 \u099c\u0
 addNewEmployee=\u09a8\u09a4\u09c1\u09a8 \u0995\u09b0\u09cd\u09ae\u09c0 \u0985\u09a8\u09cd\u09a4\u09b0\u09cd\u09ad\u09c1\u0995\u09cd\u09a4\u09bf
 # Labour Menu Ends ------------------------------------------------------------------
 Click=&#2453;&#2509;&#2482;&#2495;&#2453;&#2509;
+date=\u09a4\u09be\u09b0\u09bf\u0996
 # Toolbar Starts ---------------------------------------------------------------------------
 addNewItem=&#2472;&#2468;&#2497;&#2472; &#2438;&#2439;&#2463;&#2503;&#2478; &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495;
 addNewUser=&#2472;&#2468;&#2497;&#2472;  &#2439;&#2441;&#2460;&#2494;&#2480;&#2509; &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495;
