--- a/src/main/webapp/WEB-INF/Properties/English_Language_Pack.properties
+++ b/src/main/webapp/WEB-INF/Properties/English_Language_Pack.properties
@@ -26,6 +26,7 @@ addNewEmployee=Add New Employee
 # Labour Menu Ends ------------------------------------------------------------------
 # Order And Bill Menu Ends --------------------------------------------------------
 Click=Click
+date=Date
 # Toolbar Starts ---------------------------------------------------------------------------
 addNewItem=ADD NEW ITEM
 addNewUser=ADD NEW USER
