--- a/src/main/webapp/WEB-INF/Properties/SelecItemContainer.properties
+++ b/src/main/webapp/WEB-INF/Properties/SelecItemContainer.properties
@@ -21,7 +21,6 @@ addnewemployee.holiday.wednesday=WEDNESDAY,\u09ac\u09c1\u09a7\u09ac\u09be\u09b0
 addnewemployee.holiday.thursday=THURSDAY,\u09ac\u09c3\u09b9\u09b8\u09cd\u09aa\u09a4\u09bf\u09ac\u09be\u09b0
 addnewemployee.holiday.friday=FRIDAY,\u09b6\u09c1\u0995\u09cd\u09b0\u09c1\u09ac\u09be\u09b0
 addnewemployee.holiday.saturday=SATURDAY,\u09b6\u09a8\u09bf\u09ac\u09be\u09b0 
-
-
-
-
+reports.production_report_type.all=ALL,\u09b8\u09ae\u09b8\u09cd\u09a4 \u09b0\u09c7\u0995\u09b0\u09cd\u09a1
+reports.production_report_type.bydate=BY DATE,\u09a4\u09be\u09b0\u09bf\u0996 \u0985\u09a8\u09c1\u09b8\u09be\u09b0\u09c7
+reports.production_report_type.weekly=WEEKLY,\u09b8\u09be\u09aa\u09cd\u09a4\u09be\u09b9\u09bf\u0995
