Labour Payment Complete Module

--- a/src/main/webapp/WEB-INF/Properties/English_Language_Pack.properties
+++ b/src/main/webapp/WEB-INF/Properties/English_Language_Pack.properties
@@ -21,12 +21,14 @@ addnewitem=Add New Item
 advanceReport=Daily Advance Report
 addNewStatusType=Add New Status Type
 addNewLocation=Add New Location
+wagePayment =Labour Payment
 # Labour Menu Starts ------------------------------------------------------------------
 addNewEmployee=Add New Employee
 # Labour Menu Ends ------------------------------------------------------------------
 # Order And Bill Menu Ends --------------------------------------------------------
 Click=Click
 date=Date
+GETNEXTBILLNO=GET NEXT BILL NO
 # Toolbar Starts ---------------------------------------------------------------------------
 addNewItem=ADD NEW ITEM
 addNewUser=ADD NEW USER
