--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mallickdresses</groupId>
     <artifactId>OrderManager</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>Beta</version>
     <packaging>war</packaging>
     <name>OrderManager</name>
     <properties>
