--- a/src/main/webapp/WEB-INF/Properties/Bengali_Language_Pack.properties
+++ b/src/main/webapp/WEB-INF/Properties/Bengali_Language_Pack.properties
@@ -18,6 +18,7 @@ searchorder=&#2476;&#2495;&#2482; &#2437;&#2472;&#2497;&#2488;&#2472;&#2509;&#24
 addstatus=&#2437;&#2480;&#2509;&#2465;&#2494;&#2480; &#2437;&#2476;&#2488;&#2509;&#2469;&#2494;&#2472; &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495;
 ordersettings=&#2437;&#2480;&#2509;&#2465;&#2494;&#2480; &#2488;&#2503;&#2463;&#2495;&#2434;&#2488;
 addnewitem=&#2472;&#2468;&#2497;&#2472; &#2438;&#2439;&#2463;&#2503;&#2478; &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495;
+wagePayment =\u0995\u09be\u099c\u09c7\u09b0 \u09b9\u09bf\u09b8\u09be\u09ac 
 advanceReport=\u099c\u09ae\u09be \u09b9\u09bf\u09b8\u09be\u09ac
 addNewStatusType=\u09a8\u09a4\u09c1\u09a8 \u0985\u09ac\u09b8\u09cd\u09a5\u09be\u09a8 \u098f\u09a8\u09cd\u099f\u09cd\u09b0\u09bf 
 addNewLocation=\u09a8\u09a4\u09c1\u09a8 \u09b0\u09be\u0996\u09be\u09b0 \u099c\u09be\u09df\u0997\u09be \u098f\u09a8\u09cd\u099f\u09cd\u09b0\u09bf
@@ -27,6 +28,7 @@ addNewEmployee=\u09a8\u09a4\u09c1\u09a8 \u0995\u09b0\u09cd\u09ae\u09c0 \u0985\u0
 # Labour Menu Ends ------------------------------------------------------------------
 Click=&#2453;&#2509;&#2482;&#2495;&#2453;&#2509;
 date=\u09a4\u09be\u09b0\u09bf\u0996
+GETNEXTBILLNO=\u09aa\u09b0\u09ac\u09b0\u09cd\u09a4\u09c0 \u09ac\u09bf\u09b2 \u09a8\u09ae\u09cd\u09ac\u09b0
 # Toolbar Starts ---------------------------------------------------------------------------
 addNewItem=&#2472;&#2468;&#2497;&#2472; &#2438;&#2439;&#2463;&#2503;&#2478; &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495;
 addNewUser=&#2472;&#2468;&#2497;&#2472;  &#2439;&#2441;&#2460;&#2494;&#2480;&#2509; &#2447;&#2472;&#2509;&#2463;&#2509;&#2480;&#2495;
