--- a/src/main/webapp/WEB-INF/Properties/SelecItemContainer.properties
+++ b/src/main/webapp/WEB-INF/Properties/SelecItemContainer.properties
@@ -24,3 +24,7 @@ addnewemployee.holiday.saturday=SATURDAY,\u09b6\u09a8\u09bf\u09ac\u09be\u09b0
 reports.production_report_type.all=ALL,\u09b8\u09ae\u09b8\u09cd\u09a4 \u09b0\u09c7\u0995\u09b0\u09cd\u09a1
 reports.production_report_type.bydate=BY DATE,\u09a4\u09be\u09b0\u09bf\u0996 \u0985\u09a8\u09c1\u09b8\u09be\u09b0\u09c7
 reports.production_report_type.weekly=WEEKLY,\u09b8\u09be\u09aa\u09cd\u09a4\u09be\u09b9\u09bf\u0995
+assignment_type.type.master=MASTER,\u09ae\u09be\u09b8\u09cd\u099f\u09be\u09b0
+assignment_type.type.tailor=TAILOR,\u09ae\u09bf\u09b8\u09cd\u09a4\u09cd\u09b0\u09bf
+assignment_type.type.finisher=FINISHER,\u09b9\u09be\u09a4\u0995\u09be\u099c
+assignment_type.type.iron=IRON,\u0987\u09b8\u09cd\u09a4\u09cd\u09b0\u09bf
