--- a/pom.xml
+++ b/pom.xml
@@ -11,15 +11,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>      
     <dependencies>
-        <dependency>
-    <groupId>com.microsoft.sqlserver</groupId>
-    <artifactId>sqljdbc4</artifactId>
-    <version>4.0</version>
-    <scope>test</scope>
-</dependency>
+  
         
-        
-        
+          <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>6.1.0.jre8</version>
+        </dependency>
         
         <dependency>
             <groupId>org.json</groupId>
