Delivery Completed Transaction Assignment Change Form

--- a/src/main/webapp/WEB-INF/Properties/SelecItemContainer.properties
+++ b/src/main/webapp/WEB-INF/Properties/SelecItemContainer.properties
@@ -28,3 +28,5 @@ assignment_type.type.master=MASTER,\u09ae\u09be\u09b8\u09cd\u099f\u09be\u09b0
 assignment_type.type.tailor=TAILOR,\u09ae\u09bf\u09b8\u09cd\u09a4\u09cd\u09b0\u09bf
 assignment_type.type.finisher=FINISHER,\u09b9\u09be\u09a4\u0995\u09be\u099c
 assignment_type.type.iron=IRON,\u0987\u09b8\u09cd\u09a4\u09cd\u09b0\u09bf
+assignment_change_menu.type.change=CHANGE,\u09aa\u09b0\u09bf\u09ac\u09b0\u09cd\u09a4\u09a8
+assignment_change_menu.type.cancel=CANCEL,\u09ac\u09be\u09a4\u09bf\u09b2
