Shortcut Fixed , Bug FIXES

--- a/src/main/webapp/WEB-INF/Properties/English_Language_Pack.properties
+++ b/src/main/webapp/WEB-INF/Properties/English_Language_Pack.properties
@@ -22,6 +22,8 @@ advanceReport=Daily Advance Report
 addNewStatusType=Add New Status Type
 addNewLocation=Add New Location
 wagePayment =Labour Payment
+updateBulkMasterTailor = Master & Tailor Order Assignment
+printModule=Print Module
 # Labour Menu Starts ------------------------------------------------------------------
 addNewEmployee=Add New Employee
 # Labour Menu Ends ------------------------------------------------------------------
