Report Enhancements / Print

--- a/src/main/webapp/WEB-INF/Properties/AppSettings.properties
+++ b/src/main/webapp/WEB-INF/Properties/AppSettings.properties
@@ -2,8 +2,8 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 DB_SCHEMA_VERSION=SCHEMA_1_0
-DB_DATABASE_NAME = Test2
-DB_FILE_PATH=c:\\Users\\intel\\Google Drive\\MDOM_BackUP\\
+DB_DATABASE_NAME = ODM
+DB_FILE_PATH=c:\\MDOM\\
 
 
 
