--- a/src/main/webapp/WEB-INF/Properties/English_Language_Pack.properties
+++ b/src/main/webapp/WEB-INF/Properties/English_Language_Pack.properties
@@ -24,6 +24,7 @@ addNewLocation=Add New Location
 wagePayment =Labour Payment
 updateBulkMasterTailor = Master & Tailor Order Assignment
 printModule=Print Module
+addNewAccount= New Account Register
 # Labour Menu Starts ------------------------------------------------------------------
 addNewEmployee=Add New Employee
 # Labour Menu Ends ------------------------------------------------------------------
