Image Upload/Download

--- a/src/main/webapp/WEB-INF/Database/My_SQL_Queries.properties
+++ b/src/main/webapp/WEB-INF/Database/My_SQL_Queries.properties
@@ -2,3 +2,6 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
+{type: "select", label: "SHOP" ,readonly: true, name: "SHOP_ACCOUNT=STR", labelWidth: "120", inputWidth: "170", style: "font-weight:bold;background-color:#8cf9ff;", maxLength: "50", tooltip: "LOCATION NAME", icon: "icon-select", required: true, validate: "NotEmpty",options:[
+    <mytags:SelectHandler emptyField="true" listName="accounttransaction.shopaccount"/>
+    ]},
