--- a/src/main/webapp/WEB-INF/Properties/English_Language_Pack.properties
+++ b/src/main/webapp/WEB-INF/Properties/English_Language_Pack.properties
@@ -25,6 +25,7 @@ wagePayment =Labour Payment
 updateBulkMasterTailor = Master & Tailor Order Assignment
 printModule=Print Module
 addNewAccount= New Account Register
+addNewAccountTransaction=New Transaction
 # Labour Menu Starts ------------------------------------------------------------------
 addNewEmployee=Add New Employee
 # Labour Menu Ends ------------------------------------------------------------------
