--- a/src/main/webapp/WEB-INF/Properties/SelecItemContainer.properties
+++ b/src/main/webapp/WEB-INF/Properties/SelecItemContainer.properties
@@ -33,4 +33,12 @@ assignment_change_menu.type.cancel=CANCEL,\u09ac\u09be\u09a4\u09bf\u09b2
 accountregister.module.cloth_supplier=CLOTH_SUPPLIER,\u0995\u09be\u09aa\u09dc \u09aa\u09be\u09b0\u09cd\u099f\u09bf 
 accountregister.module.material_supplier=MATERIAL_SUPPLIER,\u09ae\u09c7\u099f\u09c7\u09b0\u09bf\u09df\u09be\u09b2 \u09aa\u09be\u09b0\u09cd\u099f\u09bf 
 accountregister.module.stationery_supplier=STATIONERY_SUPPLIER,\u09b8\u09cd\u099f\u09c7\u09b6\u09a8\u09be\u09b0\u09bf \u09aa\u09be\u09b0\u09cd\u099f\u09bf 
+accounttransaction.type.outward=OUTWARD
+accounttransaction.type.inward=INWARD
+accounttransaction.shopaccount.mallickdresses=MALLICK_DRESSES
+accounttransaction.shopaccount.mallickdresseschurider=MALLICK_DRESSES_CHURIDER
+accounttransaction.shopaccount.mallickdressestailors=MALLICK_DRESSES_TAILORS
+accounttransaction.funds.order=ORDER
+accounttransaction.funds.delivery=DELIVERY
+accounttransaction.funds.cash=CASH
 
