--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,11 @@
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>    
+    <listener>
+        <description>Servlet listener that exposes the request to the current thread</description>
+        <display-name>RequestContextListener</display-name>  
+        <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>  
+    </listener>
     <servlet>
         <servlet-name>SpringConfiguration</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet </servlet-class>       
