--- a/src/main/webapp/WEB-INF/Database/SQL_Server.properties
+++ b/src/main/webapp/WEB-INF/Database/SQL_Server.properties
@@ -1,4 +1,2 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
-
+#ORDER_DAO
+ORDER_DAO_CHART_DATA_LOCATION_STATUS=SELECT dbo.GETCURRENTLOCATION(od.BILL_NO) AS CURRENT_LOCATION ,SUM(OD.QUANTITY) AS STOCK FROM ORDERS OD where DBO.GETCURRENTLOCATION(od.BILL_NO) <> '' group by  DBO.GETCURRENTLOCATION(od.BILL_NO)
